force-app/main/default/objects/msmxSheet__MsmxViewset__c/msmxSheet__MsmxViewset__c.object-meta.xml
<CustomObject>
    <label>Mashmatrixビュー</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>