force-app/main/default/objects/msmxSheet__MsmxViewset__c/fields/msmxSheet__EntityStatus__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__EntityStatus__c</fullName>
    <label>Entity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Deleting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>