force-app/main/default/objects/msmxSheet__MsmxViewset__c/fields/msmxSheet__Private__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>