force-app/main/default/objects/msmxSheet__MsmxViewset__c/fields/msmxSheet__Sheet__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Sheet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sheet</label>
    <referenceTo>msmxSheet__MsmxSheet__c</referenceTo>
    <relationshipLabel>Viewsets</relationshipLabel>
    <relationshipName>Viewsets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>