force-app/main/default/objects/msmxSheet__MsmxViewset__c/fields/msmxSheet__ViewsetId__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__ViewsetId__c</fullName>
    <externalId>true</externalId>
    <label>Viewset ID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>