force-app/main/default/objects/msmxSheet__MsmxViewset__c/listViews/msmxSheet__All.listView-meta.xml
<ListView>
    <fullName>msmxSheet__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>